update mugshot and about me info

--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -1,8 +1,8 @@
-name: Ben Doherty
-studentNumber: z1234567
-gitHubUsername: notionparallax
-stackoverflow: http://stackoverflow.com/users/1835727/ben
-mediumUsername: notionparallax
-unswEmail: noIdea@unsw.edu.au
-realEmailFirstBit: ben  # this avoids spam
-realEmailOtherBit: @notionparallax.co.uk
+name: Alex Lewis
+studentNumber:
+gitHubUsername: alexlewis20
+stackoverflow: http://stackoverflow.com/users/7707421/alexlewis
+mediumUsername: alexlewis20
+unswEmail: alexlewis@hotmail.com.au
+realEmailFirstBit: alexlewis  # this avoids spam
+realEmailOtherBit: @hotmail.com.au
