update about me and start Week 3 exercise 1 and update run test fixer

--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -1,5 +1,5 @@
 name: Alex Lewis
-studentNumber:
+studentNumber: Tuesday
 gitHubUsername: alexlewis20
 stackoverflow: http://stackoverflow.com/users/7707421/alexlewis
 mediumUsername: alexlewis20
